 - [web] allow edition of IMAP flags associated to mail labels
 - [web] search scope of address book is now respected
 - [web] avoid redirection to forbidden module (via ModulesConstraints)
 - [web] lower constraints on dates range of auto-reply message (#4161)
 - [web] sort categories in event and task editors (#4349)
 - [web] show weekday in headers of day view
 - [web] updated Angular Material to version 1.1.6

Bug fixes
 - [core] yearly repeating events are not shown in web calendar (#4237)
 - [core] increased column size of settings/defaults for MySQL (#4260)
 - [core] fixed yearly recurrence calculator with until date
 - [core] generalized HTML sanitization to avoid encoding issues when replying/forwarding mails
 - [core] don't expose web calendars to other users (#4331)
 - [web] fixed display of error when the mail editor is in a popup
 - [web] attachments are not displayed on IOS (#4150)
 - [web] fixed parsing of pasted email addresses from Spreadsheet (#4258)
 - [web] messages list not accessible when changing mailbox in expanded mail view (#4269)
 - [web] only one postal address of same type is saved (#4091)
 - [web] improve handling of email notifications of a calendar properties
 - [web] fixed XSRF cookie path when changing password (#4139)
 - [web] spaces can now be inserted in address book names
 - [web] prevent the creation of empty contact categories
 - [web] fixed mail composition from message headers (#4335)
 - [web] restore messages selection after automatic refresh (#4330)
 - [web] fixed path of destination mailbox in Sieve filter editor
 - [web] force copy of dragged contacts from global address books
 - [web] removed null characters from JSON responses
 - [web] fixed advanced mailbox search when mailbox name is very long
 - [web] fixed handling of public access rights of Calendars (#4344)
 - [web] fixed server-side CSS sanitization of messages (#4366)
 - [web] cards list not accessible when changing address book in expanded card view