@@ -23,6 +23,7 @@ Enhancements
  - [web] lower constraints on dates range of auto-reply message (#4161)
  - [web] sort categories in event and task editors (#4349)
  - [web] show weekday in headers of day view
+ - [web] improve display of overlapping events with categories
  - [web] updated Angular Material to version 1.1.6
 
 Bug fixes
